--- a/HRAnalytics.Application/HRAnalytics.Application.csproj
+++ b/HRAnalytics.Application/HRAnalytics.Application.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="FluentValidation" Version="8.6.3" />
     <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HRAnalytics.Core\HRAnalytics.Core.csproj" />
   </ItemGroup>
 
 </Project>
