--- a/HRAnalytics.API/appsettings.json
+++ b/HRAnalytics.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=HRAnalyticsDb;User Id=sa;Password=Hr@Analytics123;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
