--- a/HRAnalytics.API/appsettings.json
+++ b/HRAnalytics.API/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "your-super-secret-key-with-at-least-256-bits",
+    "Issuer": "HRAnalytics",
+    "Audience": "HRAnalyticsAPI",
+    "ExpiryInMinutes": 60,
+    "RefreshTokenExpiryInDays": 7
+  }
 }
