--- a/HRAnalytics.API/HRAnalytics.API.csproj
+++ b/HRAnalytics.API/HRAnalytics.API.csproj
@@ -14,12 +14,19 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HRAnalytics.Application\HRAnalytics.Application.csproj" />
     <ProjectReference Include="..\HRAnalytics.Infrastructure\HRAnalytics.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Response\" />
   </ItemGroup>
 
 </Project>
