Employee Request Operations Added

--- a/HRAnalytics.API/appsettings.json
+++ b/HRAnalytics.API/appsettings.json
@@ -1,19 +1,21 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=HRAnalyticsDb;User Id=sa;Password=Hr@Analytics123;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=HRAnalyticsDb;User Id=sa;Password=Hr@Analytics123;TrustServerCertificate=True;"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "JwtSettings": {
-    "SecretKey": "your-super-secret-key-with-at-least-256-bits",
+    "SecretKey": "YourSuperSecretKeyHRAnalytics2024SecureKey",
     "Issuer": "HRAnalytics",
-    "Audience": "HRAnalyticsAPI",
+    "Audience": "HRAnalyticsClients",
     "ExpiryInMinutes": 60,
     "RefreshTokenExpiryInDays": 7
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
   }
 }
