--- a/tests/HRAnalytics.Tests/HRAnalytics.Tests.csproj
+++ b/tests/HRAnalytics.Tests/HRAnalytics.Tests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\HRAnalytics.API\HRAnalytics.API.csproj" />
     <ProjectReference Include="..\..\HRAnalytics.Application\HRAnalytics.Application.csproj" />
     <ProjectReference Include="..\..\HRAnalytics.Core\HRAnalytics.Core.csproj" />
   </ItemGroup>
